fixed api fallback config, added test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 logging.level.com.jpan.jokey.service.api.JokeApiClient: DEBUG
 
 feign:
-  hystrix:
+  circuitbreaker:
     enabled: true
   client:
     config:
